[package]
name = "velvet_ecs"
version = "0.1.0"
edition = "2021"
description = "An Entity Component System. Key feature: Fast world clone. (Appropriate for rollback networking)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"

bincode = "*"
log = { version = "*", features = ["max_level_debug", "release_max_level_info"] }
byteorder = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
rdxsort = "0.3.0"
serde-big-array = "*"

