[package]
name = "becs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netcode = {path= "../netcode" } # This one is temp-ish. If we need to, we can remove this, and just bridge the sim-metadata.
bib_utils = {path= "../bib_utils" }
derivative = "2.2.0"

bincode = "*"
log = { version = "*", features = ["max_level_debug", "release_max_level_info"] }
byteorder = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
rdxsort = "0.3.0"
serde-big-array = "*"